remove process_group_identifier from process-instances endpoint
